<resources>
    <string name="app_name">MeMovie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="tvShow">Tv Show</string>
    <string name="title">title</string>
    <string name="date">date</string>
    <string name="description">Description</string>
    <string name="Setting">setting</string>
    <string name="title_activity_set_mode">SetModeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="setting_theme">Setting Theme</string>
    <string name="menu_bookmark">menu bookmark</string>
    <string name="message_delete">Data dihapus</string>
    <string name="message_berhasil">Berhasil</string>

</resources>