<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_favorite"
        android:title="favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:showAsAction="collapseActionView|always"
        />
    <item
        android:id="@+id/menu_setting"
        android:title="@string/Setting"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="collapseActionView|always"

        />




</menu>